@@ -76,7 +76,7 @@ using namespace triagens::mrclient;
 /// @brief base class for clients
 ////////////////////////////////////////////////////////////////////////////////
 
-ArangoClient BaseClient;
+ArangoClient BaseClient("arangoirb");
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief the initial default connection
