@@ -121,7 +121,7 @@ namespace triagens {
 /// @brief constructor
 ////////////////////////////////////////////////////////////////////////////////
 
-        ArangoClient ();
+        ArangoClient (char const* appName);
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief destructor
