@@ -65,7 +65,7 @@ using namespace triagens::arangob;
 /// @brief base class for clients
 ////////////////////////////////////////////////////////////////////////////////
 
-ArangoClient BaseClient;
+ArangoClient BaseClient("arangob");
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief started counter
