@@ -62,7 +62,7 @@ using namespace triagens::arango;
 /// @brief base class for clients
 ////////////////////////////////////////////////////////////////////////////////
 
-ArangoClient BaseClient;
+ArangoClient BaseClient("arangodump");
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief the initial default connection
