@@ -63,7 +63,7 @@ using namespace triagens::arango;
 /// @brief base class for clients
 ////////////////////////////////////////////////////////////////////////////////
 
-ArangoClient BaseClient;
+ArangoClient BaseClient("arangoimp");
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief the initial default connection
