@@ -61,7 +61,7 @@ using namespace triagens::arango;
 /// @brief base class for clients
 ////////////////////////////////////////////////////////////////////////////////
 
-ArangoClient BaseClient;
+ArangoClient BaseClient("arangorestore");
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief the initial default connection
