@@ -81,7 +81,7 @@ static string Prompt = "arangosh [%d]> ";
 /// @brief base class for clients
 ////////////////////////////////////////////////////////////////////////////////
 
-ArangoClient BaseClient;
+ArangoClient BaseClient("arangosh");
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief the initial default connection
