@@ -1783,8 +1783,34 @@ int TRI_Crc32File (char const* path, uint32_t* crc) {
 }
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief set the application's name, should be called before the first
+/// call to TRI_GetTempPath
+////////////////////////////////////////////////////////////////////////////////
+
+static char const* TRI_ApplicationName = NULL;
+
+void TRI_SetApplicationName (char const* name) {
+  TRI_ASSERT(strlen(name) <= 13);
+  TRI_ApplicationName = name;
+}
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief get the system's temporary path
 ////////////////////////////////////////////////////////////////////////////////
+
+#ifndef _WIN32
+// This must be exactly 14 Ys and 6 Xs because it will be overwritten
+// and these are the maximum lengths!
+static char TRI_TempPath[] = "/tmp/YYYYYYYYYYYYYYXXXXXX";
+static bool TRI_TempPathIsSet = false;
+
+static void TRI_TempPathCleaner (void) {
+  if (TRI_TempPathIsSet) {
+    rmdir(TRI_TempPath);
+    TRI_TempPathIsSet = false;
+  }
+}
+#endif
 
 char* TRI_GetTempPath () {
 
@@ -1893,7 +1919,26 @@ char* TRI_GetTempPath () {
 
   return result;
 #else
-  return TRI_DuplicateString("/tmp/arangodb");
+  char* res;
+  if (! TRI_TempPathIsSet) {
+    // Note that TRI_TempPath has space for /tmp/YYYYYYYYYYXXXXXX
+    if (TRI_ApplicationName != NULL) {
+      strcpy(TRI_TempPath, "/tmp/");
+      strncat(TRI_TempPath, TRI_ApplicationName, 13);
+      strcat(TRI_TempPath, "_XXXXXX");
+    }
+    else {
+      strcpy(TRI_TempPath, "/tmp/arangodb_XXXXXX");
+    }
+    res = mkdtemp(TRI_TempPath);
+    if (res == NULL) {
+      strcpy(TRI_TempPath, "/tmp/arangodb");
+      return TRI_DuplicateString(TRI_TempPath);
+    }
+    atexit(TRI_TempPathCleaner);
+    TRI_TempPathIsSet = true;
+  }
+  return TRI_DuplicateString(TRI_TempPath);
 #endif
 }
 
