@@ -270,6 +270,12 @@ char* TRI_HomeDirectory (void);
 int TRI_Crc32File (char const*, uint32_t*);
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief set the application's name
+////////////////////////////////////////////////////////////////////////////////
+
+void TRI_SetApplicationName (char const*);
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief get the system's temporary path
 ////////////////////////////////////////////////////////////////////////////////
 
