@@ -155,6 +155,10 @@ v2.2.6 (XXXX-XX-XX)
 
 * fixed issue #972: Compilation Issue
 
+* fixed issue #743: temporary directories are now unique and one can read
+  off the tool that created them, if empty, they are removed atexit
+
+
 
 v2.2.5 (2014-10-09)
 -------------------
